fix invisible arrow

--- a/src/styles/components/map.css
+++ b/src/styles/components/map.css
@@ -67,11 +67,9 @@
   background: #ea5739;
 }
 
-svg {
-  @apply opacity-0;
-  @apply pointer-events-none;
-}
-
 .hotspot-wrapper {
   @apply pointer-events-none;
+  svg {
+    @apply pointer-events-none opacity-0;
+  }
 }
